--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
 
 	<properties>
 		<jdk.version>1.8</jdk.version>
-		<spring.version>5.1.2.RELEASE</spring.version>
+		<spring.version>5.1.2.RELEASE</spring.vers3.109.202.102:9000ion>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.109.202.102:9000/</sonar.host.url>
+		<sonar.host.url>http://35.154.210.111:9000/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
 		<sonar.password>password</sonar.password>
              
