--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ stage('CheckoutCode'){
 git branch: 'development', credentialsId: 'bcf7c9a2-af60-4e9e-8296-19ff87c82e89', url: 'https://github.com/Ambativishnu/maven-web-application.git'
 }
 stage('Build'){
-sh "${mavenHome}/bin/mvn claen package"
+sh "${mavenHome}/bin/mvn clean package"
 }
 stage('ExecuteSonarqubeReport'){
 sh "${mavenhome}/bin/mvn sonar:sonar"
