--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,10 +11,10 @@ stage('Build'){
 sh "${mavenHome}/bin/mvn clean package"
 }
 stage('ExecuteSonarqubeReport'){
-sh "${mavenhome}/bin/mvn sonar:sonar"
+sh "${mavenHome}/bin/mvn sonar:sonar"
 }
 stage('UploadArtifactIntoNexusRepo'){
-sh "${mavenhome}/bin/mvn depoly"
+sh "${mavenHome}/bin/mvn depoly"
 }
 stage('DeployAppTomcatserver'){
 sshagent(['0ddf21f9-9d70-4a82-b21c-80878b3ebc5d']) {
